Fix overlapping navbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -130,7 +130,7 @@ h1 {
 h2 {
   font-size: 48px;
   padding-bottom: 30px;
-  padding-top: 50px;
+  padding-top: 100px;
   font-family: "HelveticaUL";
 }
 
@@ -332,7 +332,7 @@ footer .footer-col:nth-child(3) {
 }
 
 .full-logos {
-  height: 50px;
+  height: 100px;
   overflow: hidden;
   margin-bottom: 50px;
 }
